libs/cv/core.odin


	// Mat_SetSChar returns a specific row/col value from this Mat expecting
	// each element to contain a schar aka CV_8S.
	@(link_name = "Mat_SetSChar")
	mat_set_schar :: proc(m: Mat, row, col: c.int, val: c.int8_t) ---

	@(link_name = "Mat_SetSChar3")
	mat_set_schar3 :: proc(m: Mat, x, y, z: c.int, val: c.int8_t) ---

	// Mat_SetShort returns a specific row/col value from this Mat expecting
	// each element to contain a short aka CV_16S.
	@(link_name = "Mat_SetShort")
	mat_set_short :: proc(m: Mat, row, col: c.int, val: c.int16_t) ---

	@(link_name = "Mat_SetShort3")
	mat_set_short3 :: proc(m: Mat, x, y, z: c.int, val: c.int16_t) ---

	// Mat_SetInt set a specific row/col value from this Mat expecting
	// each element to contain an int aka CV_32S.
	@(link_name = "Mat_SetInt")
	mat_set_int :: proc(m: Mat, row, col: c.int, val: c.int32_t) ---

	@(link_name = "Mat_SetInt3")
	mat_set_int3 :: proc(m: Mat, x, y, z: c.int, val: c.int32_t) ---

	// Mat_SetFloat returns a specific row/col value from this Mat expecting
	// each element to contain a float aka CV_32F.
	@(link_name = "Mat_SetFloat")
	mat_set_float :: proc(m: Mat, row, col: c.int, val: c.float) ---

	@(link_name = "Mat_SetFloat3")
	mat_set_float3 :: proc(m: Mat, x, y, z: c.int, val: c.float) ---

	// Mat_SetDouble returns a specific row/col value from this Mat expecting
	// each element to contain a double aka CV_64F.
	@(link_name = "Mat_SetDouble")
	mat_set_double :: proc(m: Mat, row, col: c.int, val: c.double) ---

	@(link_name = "Mat_SetDouble3")
	mat_set_double3 :: proc(m: Mat, x, y, z: c.int, val: c.double) ---

	@(link_name = "Mat_AddUChar")
	mat_add_uchar :: proc(m: Mat, val: c.uint8_t) ---

	@(link_name = "Mat_SubtractUChar")
	mat_sub_uchar :: proc(m: Mat, val: c.uint8_t) ---

	@(link_name = "Mat_MultiplyUChar")
	mat_mul_uchar :: proc(m: Mat, val: c.uint8_t) ---

	@(link_name = "Mat_DivideUChar")
	mat_div_uchar :: proc(m: Mat, val: c.uint8_t) ---

	@(link_name = "Mat_AddFloat")
	mat_add_float :: proc(m: Mat, val: c.float) ---

	@(link_name = "Mat_SubtractFloat")
	mat_sub_float :: proc(m: Mat, val: c.float) ---

	@(link_name = "Mat_MultiplyFloat")
	mat_mul_float :: proc(m: Mat, val: c.float) ---

	@(link_name = "Mat_DivideFloat")
	mat_div_float :: proc(m: Mat, val: c.float) ---

	@(link_name = "Mat_MultiplyMatrix")
	mat_mul :: proc(x, y: Mat) ---

	@(link_name = "Mat_T")
	mat_t :: proc(x: Mat) ---

	@(link_name = "Mat_AbsDiff")
	abs_diff :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_Add")
	add :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_AddWeighted")
	add_weighted :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_BitwiseAnd")
	bitwise_and :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_BitwiseAndWithMask")
	bitwise_and_with_mask :: proc(src1, src2, dst, mask: Mat) ---

	@(link_name = "Mat_BitwiseNot")
	bitwise_not :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_BitwiseNotWithMask")
	bitwise_not_with_mask :: proc(src1, src2, dst, mask: Mat) ---

	@(link_name = "Mat_BitwiseOr")
	bitwise_or :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_BitwiseOrWithMask")
	bitwise_or_with_mask :: proc(src1, src2, dst, mask: Mat) ---

	@(link_name = "Mat_BitwiseXor")
	bitwise_xor :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_BitwiseXorWithMask")
	bitwise_xor_with_mask :: proc(src1, src2, dst, mask: Mat) ---

	@(link_name = "Mat_BatchDistance")
	batch_distance :: proc(src1, src2, dist: Mat, dtype: c.int, nidx: Mat, normType, K: c.int, mask: Mat, update: c.int, crosscheck: c.bool) ---

	@(link_name = "Mat_BorderInterpolate")
	border_interpolate :: proc(p, len, borderType: c.int) -> c.int ---

	@(link_name = "Mat_CalcCovarMatrix")
	calc_covar_matrix :: proc(samples, covar, mean: Mat, flags, ctype: c.int) ---

	@(link_name = "Mat_CartToPolar")
	cart_to_polar :: proc(x, y, magnitude, angle: Mat, angleInDegrees: c.bool) ---

	@(link_name = "Mat_CheckRange")
	check_range :: proc(m: Mat) -> c.bool ---

	@(link_name = "Mat_Compare")
	compare :: proc(src1, src2, dst: Mat, ct: c.int) ---

	@(link_name = "Mat_CountNonZero")
	count_non_zero :: proc(src: Mat) -> c.int ---

	@(link_name = "Mat_CompleteSymm")
	complete_symm :: proc(m: Mat, lowerToUpper: c.bool) ---

	@(link_name = "Mat_ConvertScaleAbs")
	convert_scale_abs :: proc(src, dst: Mat, alpha, beta: c.double) ---

	@(link_name = "Mat_CopyMakeBorder")
	copy_make_border :: proc(src, dst: Mat, top, bottom, left, right, borderType: c.int, value: Scalar) ---

	@(link_name = "Mat_DCT")
	dct :: proc(src, dst: Mat, flags: c.int) ---

	@(link_name = "Mat_Determinant")
	determinant :: proc(m: Mat) -> c.double ---

	@(link_name = "Mat_DFT")
	dft :: proc(src, dst: Mat, flags: c.int) ---

	@(link_name = "Mat_Divide")
	divide :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_Eigen")
	eigen :: proc(src, eigenvalues, eigenvectors: Mat) -> c.bool ---

	@(link_name = "Mat_EigenNonSymmetric")
	eigen_non_symmetric :: proc(src, eigenvalues, eigenvectors: Mat) ---

	@(link_name = "Mat_PCABackProject")
	pca_back_project :: proc(data, mean, eigenvectors, result: Mat, maxComponents: c.int) ---

	@(link_name = "Mat_PCACompute")
	pca_compute :: proc(src, mean, eigenvectors, eigenvalues: Mat, maxComponents: c.int) ---

	@(link_name = "Mat_PCAProject")
	pca_project :: proc(data, mean, eigenvectors, result: Mat) ---

	@(link_name = "PSNR")
	psnr :: proc(src1, src2: Mat) -> c.double ---

	@(link_name = "SVBackSubst")
	sv_back_subst :: proc(w, u, vt, rhs, dst: Mat) ---

	@(link_name = "SVDecomp")
	sv_decomp :: proc(src, w, u, vt: Mat) ---

	@(link_name = "Mat_Exp")
	exp :: proc(src, dst: Mat) ---

	@(link_name = "Mat_ExtractChannel")
	extract_channel :: proc(src, dst: Mat, coi: c.int) ---

	@(link_name = "Mat_FindNonZero")
	find_non_zero :: proc(src, idx: Mat) ---

	@(link_name = "Mat_Flip")
	flip :: proc(src, idx: Mat, flipCode: c.int) ---

	@(link_name = "Mat_Gemm")
	gemm :: proc(src1, src2: Mat, alpha: c.double, src3: Mat, beta: c.double, dst: Mat, flags: c.int) ---

	@(link_name = "Mat_GetOptimalDFTSize")
	get_optimal_dft_size :: proc(vecsize: c.int) -> c.int ---

	@(link_name = "Mat_Hconcat")
	hconcat :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_Vconcat")
	vconcat :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Rotate")
	rotate :: proc(src, dst: Mat, rotateCode: c.int) ---

	@(link_name = "Mat_Idct")
	idct :: proc(src, dst: Mat, flags: c.int) ---

	@(link_name = "Mat_Idft")
	idft :: proc(src, dst: Mat, flags, nonzeroRows: c.int) ---

	@(link_name = "Mat_InRange")
	in_range :: proc(src, lowerb, upperb, dst: Mat) ---

	@(link_name = "Mat_InRangeWithScalar")
	in_range_with_scalar :: proc(src: Mat, lowerb, upperb: Scalar, dst: Mat) ---

	@(link_name = "Mat_InsertChannel")
	insert_channel :: proc(src, dst: Mat, coi: c.int) ---

	@(link_name = "Mat_Invert")
	invert :: proc(src, dst: Mat, flags: c.int) -> c.double ---

	@(link_name = "KMeans")
	kmeans :: proc(data: Mat, k: c.int, bestLabels: Mat, criteria: TermCriteria, attempts, flags: c.int, centers: Mat) -> c.double ---

	@(link_name = "KMeansPoints")
	kmeans_points :: proc(points: PointVector, k: c.int, bestLabels: Mat, criteria: TermCriteria, attempts, flags: c.int, centers: Mat) -> c.double ---

	@(link_name = "Mat_Log")
	log :: proc(src, dst: Mat) ---

	@(link_name = "Mat_Magnitude")
	magnitude :: proc(x, y, magnitued: Mat) ---

	@(link_name = "Mat_Mahalanobis")
	mahalanobis :: proc(v1, v2, icovar: Mat) -> c.double ---

	@(link_name = "MulTransposed")
	mul_transposed :: proc(src, dest: Mat, ata: c.bool) ---

	@(link_name = "Mat_Max")
	max :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_MeanStdDev")
	mean_std_dev :: proc(src, dstMean, dstStdDev: Mat) ---

	@(link_name = "Mat_Merge")
	merge :: proc(mats: Mats, dst: Mat) ---

	@(link_name = "Mat_Min")
	min :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_MinMaxIdx")
	min_max_idx :: proc(m: Mat, minVal, maxVal: ^c.double, minIdx, maxIdx: ^c.int) ---

	@(link_name = "Mat_MinMaxLoc")
	min_max_loc :: proc(m: Mat, minVal: ^c.double, maxVal: ^c.double, minLoc, maxLoc: ^Point) ---

	@(link_name = "Mat_MinMaxLocWithMask")
	min_max_loc_with_mask :: proc(m: Mat, minVal: ^c.double, maxVal: ^c.double, minLoc, maxLoc: ^Point, mask: Mat) ---

	@(link_name = "Mat_MixChannels")
	mix_channels :: proc(src, dst: Mats, fromTo: IntVector) ---

	@(link_name = "Mat_MulSpectrums")
	mul_spectrums :: proc(a, b, c: Mat, flags: i32) ---

	@(link_name = "Mat_Multiply")
	multiply :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_MultiplyWithParams")
	multiply_with_params :: proc(src1, src2, dst: Mat, scale: c.double, dtype: c.int) ---

	@(link_name = "Mat_Normalize")
	normalize :: proc(src, dst: Mat, alpha, beta: c.double, typ: c.int) ---

	@(link_name = "Norm")
	norm :: proc(src1: Mat, normType: c.int) -> c.double ---

	@(link_name = "NormWithMats")
	norm_with_mats :: proc(src1, src2: Mat, normType: c.int) -> c.double ---

	@(link_name = "Mat_PerspectiveTransform")
	perspective_transform :: proc(src, dst, tm: Mat) ---

	@(link_name = "Mat_Solve")
	solve :: proc(src1, src2, dst: Mat, flags: c.int) -> c.bool ---

	@(link_name = "Mat_SolveCubic")
	solve_cubic :: proc(coeffs, roots: Mat) -> c.int ---

	@(link_name = "Mat_SolvePoly")
	solve_poly :: proc(coeffs, roots: Mat, maxIters: c.int) -> c.double ---

	@(link_name = "Mat_Reduce")
	reduce :: proc(src, dst: Mat, dim, rType, dType: c.int) ---

	@(link_name = "Mat_ReduceArgMax")
	reduce_arg_max :: proc(src, dst: Mat, axis: c.int, lastIndex: c.bool) ---

	@(link_name = "Mat_ReduceArgMin")
	reduce_arg_min :: proc(src, dst: Mat, axis: c.int, lastIndex: c.bool) ---

	@(link_name = "Mat_Repeat")
	repeat :: proc(src: Mat, nY, nX: c.int, dst: Mat) ---

	@(link_name = "Mat_ScaleAdd")
	scale_add :: proc(src1: Mat, alpha: c.double, src2, dst: Mat) ---

	@(link_name = "Mat_SetIdentity")
	set_identity :: proc(src: Mat, scalar: c.double) ---

	@(link_name = "Mat_Sort")
	sort :: proc(src, dst: Mat, flags: c.int) ---

	@(link_name = "Mat_SortIdx")
	sort_idx :: proc(src, dst: Mat, flags: c.int) ---

	@(link_name = "Mat_Split")
	split :: proc(src: Mat, mats: ^Mats) ---

	@(link_name = "Mat_Subtract")
	subtract :: proc(src1, src2, dst: Mat) ---

	@(link_name = "Mat_Trace")
	trace :: proc(src: Mat) -> Scalar ---

	@(link_name = "Mat_Transform")
	transform :: proc(src, dst, tm: Mat) ---

	@(link_name = "Mat_Transpose")
	transpose :: proc(src, dst: Mat) ---

	@(link_name = "Mat_PolarToCart")
	polar_to_cart :: proc(magnitude, degree, x, y: Mat, angleInDegrees: c.bool) ---

	@(link_name = "Mat_Pow")
	pow :: proc(src: Mat, power: c.double, dst: Mat) ---

	@(link_name = "Mat_Phase")
	phase :: proc(x, y, angle: Mat, angleInDegrees: c.bool) ---

	@(link_name = "Mat_Sum")
	sum :: proc(src: Mat) -> Scalar ---

	@(link_name = "TermCriteria_New")
	termcriteria_new :: proc(typ, maxCount: c.int, epsilon: c.double) -> TermCriteria ---

	@(link_name = "Contours_Close")
	contours_close :: proc(cs: Contours) ---

	@(link_name = "CStrings_Close")
	cstrings_close :: proc(cstrs: CStrings) ---

	@(link_name = "KeyPoints_Close")
	keypoints_close :: proc(ks: KeyPoints) ---

	@(link_name = "Points_Close")
	points_close :: proc(ps: Points) ---

	@(link_name = "Point_Close")
	point_close :: proc(p: Point) ---

	@(link_name = "Points2f_Close")
	points2f_close :: proc(ps: Points2f) ---

	@(link_name = "Point2f_Close")
	point2f_close :: proc(p: Point2f) ---

	@(link_name = "Rects_Close")
	rects_close :: proc(rs: Rects) ---

	@(link_name = "DMatches_Close")
	dmatches_close :: proc(ds: DMatches) ---

	@(link_name = "MultiDMatches_Close")
	multidmatches_close :: proc(mds: MultiDMatches) ---

	@(link_name = "MultiDMatches_get")
	multidmatches_get :: proc(mds: MultiDMatches, index: c.int) -> DMatches ---

	@(link_name = "Mats_get")
	mats_get :: proc(mats: Mats, i: c.int) -> Mat ---

	@(link_name = "Mats_Close")
	mats_close :: proc(mats: Mats) ---

	@(link_name = "ByteArray_Release")
	bytearray_release :: proc(buf: ByteArray) ---
